--- a/todo.html
+++ b/todo.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
+
 <body>
-    
+    <div id="app">
+        <div class="container bg-light">
+            <h1 v-bind:title="titre" class="text-center p-3">{{titre}}</h1>
+            <input type="text" v-model="message" class="w-75"> 
+            <!-- {{message}} -->
+            <button class="btn btn-info" @click="ajouterTodo" v-if="message != ''">Ajouter</button>
+            <p v-for="todo in todos" @click="inverser">
+                {{todo}}
+            </p>
+        </div>
+    </div>
 
 
-    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script>
+        const vm = Vue.createApp({
+            data() {
+                return {
+                    titre: "Ma To-Do List",
+                    todos: ["Lancer une lessive", "Faire la vaisselle"],
+                    message: "",
+                    // todos: [
+                    //     { id: 0, description: "tache 1 blabla" },
+                    //     { id: 1, description: "tache 2 blabla" }
+                    // ]
+                }
+            },
+            methods:{
+                inverser(){
+                    this.todos.reverse();
+                },
+                ajouterTodo(){
+                    this.todos.push(this.message)
+                    this.message = '';
+                }
+            }
+        }).mount("#app")
+    </script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
